# QuickDesk

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  python-executor-test.py
.github/workflows/: build-windows.yml  build.yml  docker-publish.yml  quickdesk-macos.yml  quickdesk-windows.yml
QuickDesk/: .clang-format  CMakeLists.txt  Main.qml  main.cpp  qml.qrc
QuickDesk/base/: qaesencryption.cpp  util.cpp
QuickDesk/infra/http/: httprequest.cpp  httprequest.h
QuickDesk/qml/component/: QDAccordion.qml  QDMenu.qml  QDMenuItem.qml  QDShadow.qml  RemoteDesktopView.qml
QuickDesk/qml/pages/: AboutPage.qml  DeviceListPage.qml  McpConfigPopup.qml  RemoteControlPage.qml  SettingsPage.qml
QuickDesk/qml/quickdeskcomponent/: ConnectionListPanel.qml  FloatingToolButton.qml  LoginDialog.qml  RemoteDesktopView.qml  RemoteDeviceSelector.qml  RemoteTab.qml  RemoteTabBar.qml  TrustConfirmationDialog.qml
QuickDesk/qml/views/: MainWindow.qml  RemoteWindow.qml
QuickDesk/res/: Info_Mac.plist.in
QuickDesk/res/i18n/: en_US.ts  zh_CN.ts
QuickDesk/src/api/: ApiHandler.cpp  ApiHandler.h  TrustHandler.cpp  TrustHandler.h  WebSocketServer.cpp  WebSocketServer.h
QuickDesk/src/common/: ProcessStatus.h
QuickDesk/src/component/: KeycodeMapper.cpp  KeycodeMapper.h  VideoFrameProvider.cpp  VideoFrameProvider.h
QuickDesk/src/controller/: MainController.cpp  MainController.h
QuickDesk/src/core/: localconfigcenter.cpp  localconfigcenter.h  userdatacenter.cpp  userdatacenter.h
QuickDesk/src/core/common/: commontype.h
QuickDesk/src/core/db/: appconfigdatabase.cpp  appconfigdatabase.h  userdatadatabase.cpp  userdatadatabase.h
QuickDesk/src/manager/: AuthManager.cpp  AuthManager.h  ClientManager.cpp  ClientManager.h  CloudDeviceManager.cpp  CloudDeviceManager.h  HostManager.cpp  HostManager.h  NativeMessaging.cpp  NativeMessaging.h  ProcessManager.cpp  ProcessManager.h  RemoteDeviceManager.cpp  RemoteDeviceManager.h  ServerManager.cpp  ServerManager.h  SharedMemoryManager.cpp  SharedMemoryManager.h  TurnServerManager.cpp  TurnServerManager.h  YUVPlanarVideoBuffer.h
QuickDesk/src/viewmodel/: connectionlistmodel.cpp  connectionlistmodel.h
SignalingServer/cmd/signaling/: main.go
SignalingServer/docs/: user-api-docs.md
SignalingServer/internal/handler/: settings_handler.go  user_device_handler.go  user_handler.go  ws_handler.go
SignalingServer/internal/models/: connection_history.go  device.go  settings.go  user.go  user_device.go  user_favorite.go
SignalingServer/internal/repository/: preset_repo.go
SignalingServer/migrations/: 001_init.sql
SignalingServer/web/src/i18n/: en-US.js  zh-CN.js
SignalingServer/web/src/views/: PresetPage.vue
WebClient/: index.html  remote.html
WebClient/js/: i18n.js  main.js  remote-main.js
WebClient/js/api/: user-api.js  user-sync.js
cmake/: quickdesk-remoting.cmake
docs/: MCP接入指南.md  TURN服务器部署.md  mcp-integration.md  turn-server-deployment.md  信令服务器部署.md
docs/dev/: Windows支持锁屏控制技术方案.md
examples/mcp-configs/: README.md  claude-desktop-config-mac.json  claude-desktop-config.json  cursor-mcp.json  custom-ws-url.json  with-auth-token.json
quickdesk-mcp/: Cargo.toml
quickdesk-mcp/src/: http_transport.rs  main.rs  memory.rs  server.rs  trust.rs  workflow.rs  ws_client.rs
quickdesk-skill-host/: Cargo.toml
quickdesk-skill-host/skills/python-executor/: Cargo.toml  README.md  SKILL.md
quickdesk-skill-host/skills/python-executor/src/: main.rs
scripts/: build_qd_win.bat  build_skill_host_win.bat  publish_qd_mac.sh  publish_qd_win.bat
scripts/installer/: quickdesk.iss
server/: .env  README.md  go.mod  go.sum
server/cmd/signaling/: main.go
server/internal/config/: config.go
server/internal/database/: postgres.go  redis.go
server/internal/handler/: api_handler.go  ws_handler.go
server/internal/middleware/: logger.go
server/internal/models/: device.go
server/internal/repository/: device_repo.go
server/internal/service/: auth_service.go  device_service.go
server/migrations/: 001_init.sql
test/mcp/: index.html
test/websocket/: index.html
