[package]
name = "python-executor"
version.workspace = true
edition.workspace = true
description = "MCP server skill — Python code execution for remote host"

[[bin]]
name = "python-executor"
path = "src/main.rs"

[dependencies]
mcp-server-common = { path = "../../mcp-server-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[profile.release]
strip = true
lto = true
codegen-units = 1
